@@ -1,3 +1,8 @@
+Thu Apr  5 18:00:00 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l: Break whatis definitions at .IP, .HP, .RS, and .RE
+	  (thanks to Ori Avtalion for the report).
+
 Mon Mar  5 10:02:01 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man_db.conf.in (MANDATORY_MANPATH): Remove /usr/X11R6/man
